--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "version": "1.0.0.50",
-    "description": "Manifeste externe réel pour e-FLO Dynamic Scraper",
+    "version": "1.0.0.49-real-github",
+    "description": "Manifeste externe réel pour e-FLO Dynamic Scraper (adapté pour GitHub)",
     "targets": [
       {
         "name": "Sites Reprise Argus",
@@ -91,94 +91,94 @@
     ],
     "scripts": [
       {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/assets/jquery.js",
-        "matches": ["*://*/*"],
-        "direct": false,
-        "allFrames": false,
-        "runAt": "document_start"
-      },
-      {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/assets/moment.js",
-        "matches": ["*://*/*"],
-        "direct": false,
-        "allFrames": false,
-        "runAt": "document_start"
-      },
-      {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/assets/popper.min.js",
-        "matches": ["*://*/*"],
-        "direct": false,
-        "allFrames": false,
-        "runAt": "document_start"
-      },
-      {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/assets/tippy-bundle.umd.min.js",
-        "matches": ["*://*/*"],
-        "direct": false,
-        "allFrames": false,
-        "runAt": "document_start"
-      },
-      {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/assets/helper.js",
-        "matches": ["*://*/*"],
-        "direct": false,
-        "allFrames": false,
-        "runAt": "document_start"
-      },
-      {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/assets/bootstrap.bundle.min.js",
-        "matches": ["*://*/*"],
-        "direct": false,
-        "allFrames": false,
-        "runAt": "document_start"
-      },
-      {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/core/js/inject.js",
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/assets/jquery.js",
         "matches": ["*://*/*"],
         "direct": true,
         "allFrames": false,
         "runAt": "document_start"
       },
       {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/core/js/content.js",
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/assets/moment.js",
         "matches": ["*://*/*"],
-        "direct": false,
+        "direct": true,
+        "allFrames": false,
+        "runAt": "document_start"
+      },
+      {
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/assets/popper.min.js",
+        "matches": ["*://*/*"],
+        "direct": true,
+        "allFrames": false,
+        "runAt": "document_start"
+      },
+      {
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/assets/tippy-bundle.umd.min.js",
+        "matches": ["*://*/*"],
+        "direct": true,
+        "allFrames": false,
+        "runAt": "document_start"
+      },
+      {
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/assets/helper.js",
+        "matches": ["*://*/*"],
+        "direct": true,
+        "allFrames": false,
+        "runAt": "document_start"
+      },
+      {
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/assets/bootstrap.bundle.min.js",
+        "matches": ["*://*/*"],
+        "direct": true,
+        "allFrames": false,
+        "runAt": "document_start"
+      },
+      {
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/core/js/inject.js",
+        "matches": ["*://*/*"],
+        "direct": true,
+        "allFrames": false,
+        "runAt": "document_start"
+      },
+      {
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/core/js/content.js",
+        "matches": ["*://*/*"],
+        "direct": true,
         "allFrames": false,
         "runAt": "document_end"
       },
       {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/core/js/background.js",
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/core/js/background.js",
         "matches": ["*://*/*"],
-        "direct": false,
+        "direct": true,
         "allFrames": false,
         "runAt": "document_end"
       },
       {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/core/js/move.js",
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/core/js/move.js",
         "matches": ["*://move.vectury.com/*", "https://movev2.mobilize-fs.com/*"],
-        "direct": false,
+        "direct": true,
         "allFrames": false,
         "runAt": "document_end"
       },
       {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/core/js/customer360psa.js",
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/core/js/customer360psa.js",
         "matches": ["*://www.customer360psa.com/*"],
-        "direct": false,
+        "direct": true,
         "allFrames": false,
         "runAt": "document_end"
       }
     ],
     "styles": [
       {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/css/bootstrap.min.css",
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/css/bootstrap.min.css",
         "matches": ["*://*/*"],
-        "direct": false,
+        "direct": true,
         "allFrames": true
       },
       {
-        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp/master/core/css/background.css",
+        "url": "https://cdn.jsdelivr.net/gh/BHmoudi/scrp@master/core/css/background.css",
         "matches": ["*://*/*"],
-        "direct": false,
+        "direct": true,
         "allFrames": true
       }
     ],
