--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.0.0.49-real-github",
+    "version": "1.0.0.50",
     "description": "Manifeste externe réel pour e-FLO Dynamic Scraper (adapté pour GitHub)",
     "targets": [
       {
